gcc/testsuite/g++.dg/diagnostic/pr77949.C
// Ensure that fix-it hints are emitted even at a large column number.
// { dg-options "-fdiagnostics-parseable-fixits" }

/* Very long line, where a missing semicolon would be suggested for
   insertion at column 4097.  */
class test {                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   }   
// { dg-error "-: expected .;. after class definition" "" { target *-*-* } .-1 }
/* { dg-begin-multiline-output "" }
fix-it:
{ dg-end-multiline-output "" }  */
